cluster/apps/external-name/transmission/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: external-transmission-ingress
  namespace: external-services
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`transmission.finnhartshorn.com`)
      kind: Rule
      services:
        - name: external-transmission
          kind: Service
          port: 9091
  tls:
    secretName: wildcard-tls
